2da Pre-entrega de JS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming-tech</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header class="header">
@@ -17,13 +18,13 @@
         </div>
     </header>
 
-    <main>
+    <main class="main">
         <h2 class="productos__titulo">¡Comprá el producto gamer que quieras!</h2>
 
         <section class="productos">
             <div class="cajas__productos">
                 <img src="./img/ps5.webp" alt="" class="productos__img">
-                <h2 class="cajas__productos__titulo">Play 5</h2>
+                <h2 class="cajas__productos__titulo">Playstation 5</h2>
                 <p class="cajas__productos__parrafo"><a href="" class="cajas__productos__button">Valor: $1000</a></p>
             </div>
             <div class="cajas__productos">
@@ -38,6 +39,10 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="div__footer"><a href="https://github.com/romanraffo/proyecto_Javascript" class="enlace__footer"><i class="bi bi-github"></a></i></div>
+    </footer>
 
     <script src="./js/main.js"></script>
 </body>
