Guardado de seguridad con cambios hacia 3er pre-entrega

--- a/index.html
+++ b/index.html
@@ -3,46 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaming-tech</title>
+    <title>Gamer-tech // Inicio</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 <body>
+
     <header class="header">
-        <div class="div_left_header">
-            <a href="./index.html"><img class="img__header" src="./img/logo.png" alt=""></a>
+        <div class="header__div__left">
+            <a href="./index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
         </div>
-        <div class="div_right_header">
-            <div><a href="./index.html" class="sections__header">Home</a></div>
-            <div><a href="" class="sections__header">Productos</a></div>
+        <div class="header__div__right">
+            <div class="header__div__right__sons"><a href="./index.html" class="header__div__right__items">INICIO</a></div>
+            <div class="header__div__right__sons"><a href="./pages/tienda.html" class="header__div__right__items">TIENDA</a></div>
+            <div class="header__div__right__sons"><a href="" class="header__div__right__items">CONTACTO</a></div>
+
+            <div class="separador"> | | </div>
+
+            <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a></div>
+            <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-search"></i>buscar</a></div>
+            <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-telephone-forward"></i>080 3456 3456</a></div>
         </div>
     </header>
 
-    <main class="main">
-        <h2 class="productos__titulo">¡Comprá el producto gamer que quieras!</h2>
-
-        <section class="productos">
-            <div class="cajas__productos">
-                <img src="./img/ps5.webp" alt="" class="productos__img">
-                <h2 class="cajas__productos__titulo">Playstation 5</h2>
-                <p class="cajas__productos__parrafo"><a href="" class="cajas__productos__button">Valor: $1000</a></p>
-            </div>
-            <div class="cajas__productos">
-                <img src="./img/xbox-s.png" alt="" class="productos__img">
-                <h2 class="cajas__productos__titulo">Xbox S</h2>
-                <p class="cajas__productos__parrafo"><a href="" class="cajas__productos__button">Valor: $850</a></p>
-            </div>
-            <div class="cajas__productos">
-                <img src="./img/computadora.png" alt="" class="productos__img">
-                <h2 class="cajas__productos__titulo">Computadora</h2>
-                <p class="cajas__productos__parrafo"><a href="" class="cajas__productos__button">Valor: $750</a></p>
-            </div>
+    <main class="main__inicio">
+        <section class="main__section__inicio">
+            <div class="main__section__1">¡20% OFF!</div>
+            <div class="main__section__2">Compra tu producto gamer</div>
+            <div class="main__section__3"><a href="./pages/tienda.html" class="main__section__3__item">Ir a tienda</a></div>
         </section>
     </main>
 
-    <footer class="footer">
-        <div class="div__footer"><a href="https://github.com/romanraffo/proyecto_Javascript" class="enlace__footer"><i class="bi bi-github"></a></i></div>
-    </footer>
+    <section class="section__marcas">
+        <div class="section__marcas__titulo">
+            ¡Las mejores marcas estan en Gamer-tech!
+        </div>
+        <div class="div__marcas">  
+            <div class="div__secundario__marcas">
+                <img src="./img/sony__logo.webp" alt="" class="imagenes__marcas">
+            </div>
+            <div class="div__secundario__marcas">
+                <img src="./img/fury.logo.jpg" alt="" class="imagenes__marcas">
+            </div>
+            <div class="div__secundario__marcas">
+                <img src="./img/xbox.logo.png" alt="" class="imagenes__marcas">
+            </div>
+            <div class="div__secundario__marcas">
+                <img src="./img/logii.logo.png" alt="" class="imagenes__marcas">
+            </div>
+            <div class="div__secundario__marcas">
+                <img src="./img/hyperxx.logo.jpg" alt="" class="imagenes__marcas">
+            </div>
+        </div>
+    </section>
 
     <script src="./js/main.js"></script>
 </body>
