3ra Pre-entrega de JS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="separador"> | | </div>
 
-            <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a></div>
+            <div class="header__div__right__sons"><a href="./pages/carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a></div>
             <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-search"></i>buscar</a></div>
             <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-telephone-forward"></i>080 3456 3456</a></div>
         </div>
