--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamer-tech // Tienda</title>
+    <title>Gamer-tech // Inicio</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 <body>
-    
     <header class="header">
         <div class="header__div__left">
             <a href="./index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
@@ -26,23 +25,6 @@
         </div>
     </header>
 
-    <main class="main__tienda">
-        <h2 class="productos__titulo">¡Comprá el producto gamer que quieras!</h2>
-        <section id="contenedor-productos" class="productos">
-            <!-- Esta parte se rellena en JS, Seccion "main.js" -->
-        </section>
-    </main>
-
-    <div class="div__pather__carrito">
-        <div class="carrito__title">Carrito<i class="bi bi-cart-plus"></i></div>
-        <div class="carrito" id="carrito"></div>
-        <div id="valorCarrito"></div>
-        <div class="borrar__carrito">
-            <button class="borrar__carrito__b" id="borrarCarrito" type="reset">Borrar Carrito</button>
-        </div>
-    </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/main.js"></script>
 </body>
 </html>
