Guardado de seguridad

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header__div__right">
             <div class="header__div__right__sons"><a href="./index.html" class="header__div__right__items">INICIO</a></div>
             <div class="header__div__right__sons"><a href="./pages/tienda.html" class="header__div__right__items">TIENDA</a></div>
-            <div class="header__div__right__sons"><a href="" class="header__div__right__items">CONTACTO</a></div>
+            <div class="header__div__right__sons"><a href="./pages/contacto.html" class="header__div__right__items">CONTACTO</a></div>
 
             <div class="separador"> | | </div>
 
@@ -36,11 +36,11 @@
 
     <section class="section__marcas">
         <div class="section__marcas__titulo">
-            ¡Las mejores marcas estan en Gamer-tech!
+            ¡Las mejores marcas están en Gamer-tech!
         </div>
         <div class="div__marcas">  
             <div class="div__secundario__marcas">
-                <img src="./img/sony__logo.webp" alt="" class="imagenes__marcas">
+                <img src="./img/apple.logo.jpg" alt="" class="imagenes__marcas">
             </div>
             <div class="div__secundario__marcas">
                 <img src="./img/fury.logo.jpg" alt="" class="imagenes__marcas">
@@ -55,7 +55,125 @@
                 <img src="./img/hyperxx.logo.jpg" alt="" class="imagenes__marcas">
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#f3f4f5" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+        </svg>
     </section>
+
+    <section class="section__gaming">
+        <div class="separador__gameOn">
+            <img src="./img/separador.gameOn.jpg" alt="" class="separador__gameOn__2">
+        </div>
+        <div class="section__gaming__titulo">
+            ¡Para una mejor experiencia gamer!
+        </div>
+        <div class="div__gaming">
+            <div class="div__secundario__gaming__hero">
+            </div>
+            <div class="div__secundario__gaming">
+                <img src="./img/joystick.ps5.png" alt="" class="imagenes__gaming">
+                <div class="div__secundario__img__gaming">
+                    <p class="div__gaming__valor">$50 USD</p>
+                    <p class="div__gaming__tittle">Joystick Playstation 5 sony estándar</p>
+                </div>
+            </div>
+            <div class="div__secundario__gaming">
+                <img src="./img/auriculares.philips.webp" alt="" class="imagenes__gaming">
+                <div class="div__secundario__img__gaming">
+                    <p class="div__gaming__valor">$200 USD</p>
+                    <p class="div__gaming__tittle">Auriculares inalambricos philips</p>
+                </div>
+            </div>
+            <div class="div__secundario__gaming">
+                <img src="./img/mouse.logi.png" alt="" class="imagenes__gaming">
+                <div class="div__secundario__img__gaming">
+                    <p class="div__gaming__valor">$120 USD</p>
+                    <p class="div__gaming__tittle">Mouse Logitech g502 inalambrico</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section__notebook">
+        <div class="section__notebook__titulo">
+            Comprá tu notebook para labores o entretenimiento
+        </div>
+        <div class="div_notebook">
+            <div class="div__secundario__notebook__hero">
+            </div>
+            <div class="div__secundario__notebook">
+                <img src="./img/notebook.bangho.jpg" alt="" class="imagenes__notebook">
+                <div class="div__secundario__img__notebook">
+                    <p class="div__notebook__valor">$499,99 USD</p>
+                    <p class="div__notebook__tittle">NOTEBOOK BANGHO MAX // Inter I3</p>
+                </div>
+            </div>
+            <div class="div__secundario__notebook">
+                <img src="./img/notebook.lenovo.jpg" alt="" class="imagenes__notebook">
+                <div class="div__secundario__img__notebook">
+                    <p class="div__notebook__valor">$300 USD</p>
+                    <p class="div__notebook__tittle">NOTEBOOK LENOVO // Intel celeron</p>
+                </div>
+            </div>
+            <div class="div__secundario__notebook">
+                <img src="./img/notebook.Hp.jpg" alt="" class="imagenes__notebook">
+                <div class="div__secundario__img__notebook">
+                    <p class="div__notebook__valor">$549,99 USD</p>
+                    <p class="div__notebook__tittle">NOTEBOOK HP 15.6 // Procesador Ryzen 5</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="item__order">
+        <div class="item__order__2">
+            UNICAMENTE PEDIDOS POR LA WEB
+        </div>
+        <div class="item__order__3">
+            pedidos solo por esta web
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container__footer">
+            <div class="div__left__footer">
+                <p class="footer__tittles">ATENCION AL CLIENTE:</p>
+                <div class="footer__AAC">
+                    <p class="footer__AAC__2">080 3456 3456</p>
+                    <p class="footer__AAC__2">Consultas:</p>
+                    <p class="footer__AAC__2">Gamer-tech.consultas@hotmail.com</p>
+                    <p class="footer__AAC__3">Atencion:</p>
+                    <p class="footer__AAC__2">Lunes a viernes de 8 a 20hs</p>
+                    <p class="footer__tittles">INFORMACION UTIL:</p>
+                    <p class="footer__AAC__2">Derechos del consumidor</p>
+                    <p class="footer__AAC__2">Formas de pago</p>
+                    <p class="footer__AAC__2">Terminos y condiciones</p>
+                    <p class="footer__AAC__2">Politica de privacidad</p>
+                </div>
+            </div>
+            <div class="div__center__footer">
+                <a href="./index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
+            </div>
+            <div class="div__right__footer">
+                <p class="footer__tittles">NUESTRAS REDES:</p>
+                <div class="div__footer__redes">
+                    <a href=""><p class="footer__redes"><i class="bi bi-instagram"></i></p></a>
+                </div>
+                <div class="div__footer__redes">
+                    <a href=""><p class="footer__redes"><i class="bi bi-twitter-x"></i></i></p></a>
+                </div>
+                <div class="div__footer__redes">
+                    <a href=""><p class="footer__redes"><i class="bi bi-youtube"></i></p></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__Copyright">
+            <div class="footer__Copyright__2">
+                Copyright © 2024 Roman Raffo // GitHub<a href="https://github.com/romanraffo/proyecto_Javascript" class="footer__redes__personales" target="_blank"><i class="bi bi-github"></i></a>
+                Linked-in<a href="https://www.linkedin.com/in/rom%C3%A1n-raffo-687880298/" class="footer__redes__personales" target="_blank"><i class="bi bi-linkedin"></i></a>
+            </div>
+        </div>
+    </footer>
 
     <script src="./js/main.js"></script>
 </body>
