--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -25,6 +25,56 @@
         </div>
     </header>
 
+    <section class="item__order">
+        <div class="item__order__2">
+            UNICAMENTE PEDIDOS POR LA WEB
+        </div>
+        <div class="item__order__3">
+            pedidos solo por esta web
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container__footer">
+            <div class="div__left__footer">
+                <p class="footer__tittles">ATENCION AL CLIENTE:</p>
+                <div class="footer__AAC">
+                    <p class="footer__AAC__2">080 3456 3456</p>
+                    <p class="footer__AAC__2">Consultas:</p>
+                    <p class="footer__AAC__2">Gamer-tech.consultas@hotmail.com</p>
+                    <p class="footer__AAC__3">Atencion:</p>
+                    <p class="footer__AAC__2">Lunes a viernes de 8 a 20hs</p>
+                    <p class="footer__tittles">INFORMACION UTIL:</p>
+                    <p class="footer__AAC__2">Derechos del consumidor</p>
+                    <p class="footer__AAC__2">Formas de pago</p>
+                    <p class="footer__AAC__2">Terminos y condiciones</p>
+                    <p class="footer__AAC__2">Politica de privacidad</p>
+                </div>
+            </div>
+            <div class="div__center__footer">
+                <a href="../index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
+            </div>
+            <div class="div__right__footer">
+                <p class="footer__tittles">NUESTRAS REDES:</p>
+                <div class="div__footer__redes">
+                    <a href=""><p class="footer__redes"><i class="bi bi-instagram"></i></p></a>
+                </div>
+                <div class="div__footer__redes">
+                    <a href=""><p class="footer__redes"><i class="bi bi-twitter-x"></i></i></p></a>
+                </div>
+                <div class="div__footer__redes">
+                    <a href=""><p class="footer__redes"><i class="bi bi-youtube"></i></p></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__Copyright">
+            <div class="footer__Copyright__2">
+                Copyright © 2024 Roman Raffo // GitHub<a href="https://github.com/romanraffo/proyecto_Javascript" class="footer__redes__personales" target="_blank"><i class="bi bi-github"></i></a>
+                Linked-in<a href="https://www.linkedin.com/in/rom%C3%A1n-raffo-687880298/" class="footer__redes__personales" target="_blank"><i class="bi bi-linkedin"></i></a>
+            </div>
+        </div>
+    </footer>
+
     <script src="../js/main.js"></script>
 </body>
 </html>
