guardado de seguridad, cambios en el js

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -20,13 +20,30 @@
 
             <div class="separador"> | | </div>
 
-            <div class="header__div__right__sons"><a href="./carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a></div>
+            <div class="header__div__right__sons"><a href="./carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a><span class="numero__carrito">0</span></div>
             <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-search"></i>buscar</a></div>
             <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-telephone-forward"></i>080 3456 3456</a></div>
         </div>
     </header>
 
     <main class="main__tienda">
+        <ul class="tienda__seccion">
+            <li>
+                <button class="tienda__secciones" id="">Todos los productos</button>
+            </li>
+            <li>
+                <p class="tienda__secciones">| |</p>
+            </li>
+            <li>
+                <button class="tienda__secciones">Consolas</button>
+            </li>
+            <li>
+                <button class="tienda__secciones">Computadoras</button>
+            </li>
+            <li>
+                <button class="tienda__secciones">Periféricos</button>
+            </li>
+        </ul>
         <section id="contenedor-productos" class="productos">
             <!-- Esta parte se rellena en JS, Seccion "main.js" -->
         </section>
