guardado de seguridad: Agregado de header responsive y JS a Tienda

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -25,6 +25,15 @@
         </div>
     </header>
 
+    <div class="div__pather__carrito">
+        <div class="carrito__title">Carrito<i class="bi bi-cart-plus"></i></div>
+        <div class="carrito" id="carrito"></div>
+        <div id="valorCarrito"></div>
+        <div class="borrar__carrito">
+            <button class="borrar__carrito__b" id="borrarCarrito" type="reset">Borrar Carrito</button>
+        </div>
+    </div>
+
     <section class="item__order">
         <div class="item__order__2">
             UNICAMENTE PEDIDOS POR LA WEB
