--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <div class="header__div__left">
-            <a href="./index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
+            <a href="../index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
         </div>
         <div class="header__div__right">
             <div class="header__div__right__sons"><a href="../index.html" class="header__div__right__items">INICIO</a></div>
