--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -11,7 +11,7 @@
     
     <header class="header">
         <div class="header__div__left">
-            <a href="./index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
+            <a href="../index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
         </div>
         <div class="header__div__right">
             <div class="header__div__right__sons"><a href="../index.html" class="header__div__right__items">INICIO</a></div>
@@ -29,34 +29,25 @@
     <main class="main__tienda">
         <ul class="tienda__seccion">
             <li>
-                <button class="tienda__secciones" id="">Todos los productos</button>
+                <button class="tienda__secciones boton__categoria" id="todos__los__productos">Todos los productos</button>
             </li>
             <li>
                 <p class="tienda__secciones">| |</p>
             </li>
             <li>
-                <button class="tienda__secciones">Consolas</button>
+                <button class="tienda__secciones boton__categoria" id="consolas">Consolas<i class="incons-secciones bi bi-controller"></i></button>
             </li>
             <li>
-                <button class="tienda__secciones">Computadoras</button>
+                <button class="tienda__secciones boton__categoria" id="computadoras">Computadoras<i class="incons-secciones bi bi-pc-display-horizontal"></i></button>
             </li>
             <li>
-                <button class="tienda__secciones">Periféricos</button>
+                <button class="tienda__secciones boton__categoria" id="perifericos">Periféricos<i class="incons-secciones bi bi-mouse2-fill"></i></button>
             </li>
         </ul>
         <section id="contenedor-productos" class="productos">
             <!-- Esta parte se rellena en JS, Seccion "main.js" -->
         </section>
     </main>
-
-    <div class="div__pather__carrito">
-        <div class="carrito__title">Carrito<i class="bi bi-cart-plus"></i></div>
-        <div class="carrito" id="carrito"></div>
-        <div id="valorCarrito"></div>
-        <div class="borrar__carrito">
-            <button class="borrar__carrito__b" id="borrarCarrito" type="reset">Borrar Carrito</button>
-        </div>
-    </div>
 
     <section class="item__order">
         <div class="item__order__2">
