--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
             <a href="./index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
         </div>
         <div class="header__div__right">
-            <div class="header__div__right__sons"><a href="./index.html" class="header__div__right__items">INICIO</a></div>
-            <div class="header__div__right__sons"><a href="./pages/tienda.html" class="header__div__right__items">TIENDA</a></div>
-            <div class="header__div__right__sons"><a href="./pages/contacto.html" class="header__div__right__items">CONTACTO</a></div>
+            <div class="header__div__right__sons__left"><a href="./index.html" class="header__div__right__items">INICIO</a></div>
+            <div class="header__div__right__sons__left"><a href="./pages/tienda.html" class="header__div__right__items">TIENDA</a></div>
+            <div class="header__div__right__sons__left"><a href="./pages/contacto.html" class="header__div__right__items">CONTACTO</a></div>
 
             <div class="separador"> | | </div>
 
             <div class="header__div__right__sons"><a href="./pages/carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a></div>
-            <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-search"></i>buscar</a></div>
             <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-telephone-forward"></i>080 3456 3456</a></div>
+        </div>
+        <div class="header__media__quaries">
+            <a href="./pages/headermediaquaries.html"><i class="bi bi-list menu__mq"></i></a>
         </div>
     </header>
 
@@ -55,7 +57,7 @@
                 <img src="./img/hyperxx.logo.jpg" alt="" class="imagenes__marcas">
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="separado__svg">
                 <path fill="#f3f4f5" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
     </section>
