Diseño responsive terminado (Solo falta el de carrito).

--- a/pages/headermediaquaries.html
+++ b/pages/headermediaquaries.html
@@ -11,7 +11,7 @@
     
     <header class="header__media__quaries__section">
         <div><a href="../index.html" class="header__volver"> <i class="bi bi-arrow-left"></i> volver</div></a>
-        <h1 class="header__media__quaries__logo"> Gamer-tech. </h1>
+        <h1><a href="../index.html" class="header__media__quaries__logo"> Gamer-tech. </a></h1>
         <div class="header__media__quaries__secciones__pather"><a href="../index.html" class="header__media__quaries__secciones"> <i class="bi bi-arrow-right"></i> INICIO </a></div>
         <div class="header__media__quaries__secciones__pather"><a href="../pages/tienda.html" class="header__media__quaries__secciones"> <i class="bi bi-arrow-right"></i> TIENDA </a></div>
         <div class="header__media__quaries__secciones__pather"><a href="../pages/contacto.html" class="header__media__quaries__secciones"> <i class="bi bi-arrow-right"></i> CONTACTO </a></div>
