--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -14,33 +14,35 @@
             <a href="../index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
         </div>
         <div class="header__div__right">
-            <div class="header__div__right__sons"><a href="../index.html" class="header__div__right__items">INICIO</a></div>
-            <div class="header__div__right__sons"><a href="./tienda.html" class="header__div__right__items">TIENDA</a></div>
-            <div class="header__div__right__sons"><a href="./contacto.html" class="header__div__right__items">CONTACTO</a></div>
+            <div class="header__div__right__sons__left"><a href="../index.html" class="header__div__right__items">INICIO</a></div>
+            <div class="header__div__right__sons__left"><a href="./tienda.html" class="header__div__right__items">TIENDA</a></div>
+            <div class="header__div__right__sons__left"><a href="./contacto.html" class="header__div__right__items">CONTACTO</a></div>
 
             <div class="separador"> | | </div>
 
-            <div class="header__div__right__sons"><a href="./carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a><span class="numero__carrito">0</span></div>
-            <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-search"></i>buscar</a></div>
+            <div class="header__div__right__sons"><a href="./carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a></div>
             <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-telephone-forward"></i>080 3456 3456</a></div>
+        </div>
+        <div class="header__media__quaries">
+            <a href="headermediaquaries.html"><i class="bi bi-list menu__mq"></i></a>
         </div>
     </header>
 
     <main class="main__tienda">
         <ul class="tienda__seccion">
-            <li>
+            <li class="ul__tienda">
                 <button class="tienda__secciones boton__categoria" id="todos__los__productos">Todos los productos</button>
             </li>
-            <li>
+            <li class="ul__tienda">
                 <p class="tienda__secciones">| |</p>
             </li>
-            <li>
+            <li class="ul__tienda">
                 <button class="tienda__secciones boton__categoria" id="consolas">Consolas<i class="incons-secciones bi bi-controller"></i></button>
             </li>
-            <li>
+            <li class="ul__tienda">
                 <button class="tienda__secciones boton__categoria" id="computadoras">Computadoras<i class="incons-secciones bi bi-pc-display-horizontal"></i></button>
             </li>
-            <li>
+            <li class="ul__tienda">
                 <button class="tienda__secciones boton__categoria" id="perifericos">Periféricos<i class="incons-secciones bi bi-mouse2-fill"></i></button>
             </li>
         </ul>
