--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -8,20 +8,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 <body>
+
     <header class="header">
         <div class="header__div__left">
-            <a href="./index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
+            <a href="../index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
         </div>
         <div class="header__div__right">
-            <div class="header__div__right__sons"><a href="../index.html" class="header__div__right__items">INICIO</a></div>
-            <div class="header__div__right__sons"><a href="./tienda.html" class="header__div__right__items">TIENDA</a></div>
-            <div class="header__div__right__sons"><a href="" class="header__div__right__items">CONTACTO</a></div>
+            <div class="header__div__right__sons__left"><a href="../index.html" class="header__div__right__items">INICIO</a></div>
+            <div class="header__div__right__sons__left"><a href="./tienda.html" class="header__div__right__items">TIENDA</a></div>
+            <div class="header__div__right__sons__left"><a href="./contacto.html" class="header__div__right__items">CONTACTO</a></div>
 
             <div class="separador"> | | </div>
 
             <div class="header__div__right__sons"><a href="./carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a></div>
-            <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-search"></i>buscar</a></div>
             <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-telephone-forward"></i>080 3456 3456</a></div>
+        </div>
+        <div class="header__media__quaries">
+            <a href="headermediaquaries.html"><i class="bi bi-list menu__mq"></i></a>
         </div>
     </header>
 
