--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,15 +14,17 @@
             <a href="../index.html" class="header__div__logo"><h1>Gamer-tech.</h1></a>
         </div>
         <div class="header__div__right">
-            <div class="header__div__right__sons"><a href="../index.html" class="header__div__right__items">INICIO</a></div>
-            <div class="header__div__right__sons"><a href="./tienda.html" class="header__div__right__items">TIENDA</a></div>
-            <div class="header__div__right__sons"><a href="./contacto.html" class="header__div__right__items">CONTACTO</a></div>
+            <div class="header__div__right__sons__left"><a href="../index.html" class="header__div__right__items">INICIO</a></div>
+            <div class="header__div__right__sons__left"><a href="./tienda.html" class="header__div__right__items">TIENDA</a></div>
+            <div class="header__div__right__sons__left"><a href="./contacto.html" class="header__div__right__items">CONTACTO</a></div>
 
             <div class="separador"> | | </div>
 
             <div class="header__div__right__sons"><a href="./carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a></div>
-            <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-search"></i>buscar</a></div>
             <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-telephone-forward"></i>080 3456 3456</a></div>
+        </div>
+        <div class="header__media__quaries">
+            <a href="headermediaquaries.html"><i class="bi bi-list menu__mq"></i></a>
         </div>
     </header>
     
