--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -20,7 +20,7 @@
 
             <div class="separador"> | | </div>
 
-            <div class="header__div__right__sons"><a href="./carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a></div>
+            <div class="header__div__right__sons"><a href="./carrito.html" class="header__div__right__item"><i class="bi bi-cart-plus"></i>carrito</a><span class="numero__carrito" id="numero-carrito">0</span></div>
             <div class="header__div__right__sons"><a href="" class="header__div__right__item"><i class="bi bi-telephone-forward"></i>080 3456 3456</a></div>
         </div>
         <div class="header__media__quaries">
