--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -32,40 +32,14 @@
         <div class="carrito__compras__titulo">
             <p class="carrito__compras__parrafo__titulo">Carrito de compras</p>
         </div>
-        <div class="carrito__vacio">
-            <p class="carrito__compras__parrafo__vacio">No tenes productos en el carrito...<i class="bi bi-cart2"></i></p>
+        <div class="carrito__vacio" id="carrito-vacio">
+            <!-- Esta parte se rellena en JS, Seccion "seccionCarrito.js" -->
         </div>
-        <div class="contenedor__carrito">
-            <div class="subcontenedor__carrito">
-                <div class="imagen__carrito">
-                    <img src="../img/play5.webp" alt="" class="imagen__carrito__tamanio">
-                </div>
-                <div class="nombre__producto__carrito">
-                    Playstation 5
-                </div>
-                <div class="cantidad__productos__carrito">
-                    cantidad: 2
-                </div>
-                <div class="precio__por__unidad__carrito">
-                    valor por unidad: $500 USD
-                </div>
-                <div class="borrar__producto__carrito">
-                    <button class="remove__carrito"><i class="bi bi-trash"></i></button>
-                </div>
-            </div>
+        <div class="contenedor__carrito" id="contenedor-carrito">
+            <!-- Esta parte se rellena en JS, Seccion "seccionCarrito.js" -->
         </div>
-        <div class="contenedor__carrito__elementos">
-            <div class="subcontenedor__carrito__elementos">
-                <div class="elementos__carrito">
-                    <button class="borrar__carrito">Vaciar carrito<i class="bi bi-trash"></i></button>
-                </div>
-                <div class="precio__por__unidad__carrito">
-                    Total: $500 USD
-                </div>
-                <div class="elementos__carrito">
-                    <button class="comprar__carrito">Comprar carrito</button>
-                </div>
-            </div>
+        <div class="contenedor__carrito__elementos" id="contenedor-total">
+            <!-- Esta parte se rellena en JS, Seccion "seccionCarrito.js" -->
         </div>
     </main>
 
