Proyecto final practicamente terminado(revisar fetch)

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -29,6 +29,12 @@
     </header>
 
     <main class="main__tienda">
+        <div class="formulario">
+            <form action="" id="form" class="formulario_form">
+                <input type="text" id="form-input" class="formulario_input" placeholder="Buscar producto...">
+                <input type="submit" value="buscar" class="formulario_boton">
+            </form>
+        </div>
         <ul class="tienda__seccion">
             <li class="ul__tienda">
                 <button class="tienda__secciones boton__categoria" id="todos__los__productos">Todos los productos</button>
